[package]
name = "arzte"
version = "0.9.35"
authors = ["Iris Hoffmeyer <hoffmeyer25@gmail.com>"]
publish = false
build = "build.rs"
edition = "2018"

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
config = {version = "0.10", default-features = false, features = ["toml"] }
chrono = "0.4"
typemap = "0.3"
built = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.10"
sentry = "0.17.0" # Specfiying a full version as sentry won't follow semver until release 1.0
tar = "0.4"
flate2 = "1.0"
semver = "0.9"
blake2b_simd = "0.5"
sqlx = { version = "0.2", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
tokio = { version = "0.2" }
tokio-util = { version = "0.2" }
dotenv = "0.15"
fasteval = "0.2"
bc = "0.1"

[dependencies.serenity]
version = "0.8.0"
default-features = false
features = ["cache", "http", "framework", "standard_framework", "rustls_backend"]

[build-dependencies]
built = "0.4"
