[package]
name = "arzte"
version = "0.12.2"
authors = [ "Iris Hoffmeyer <hoffmeyer25@gmail.com>" ]
publish = false
build = "build.rs"
edition = "2018"

[dependencies]
bc = "0.1.10"
blake2b_simd = "0.5.11"
built = "0.4.4"
chrono = "0.4.19"
config = { version = "0.10.1", default-features = false, features = [ "toml" ] }
dotenv = "0.15.0"
fasteval = { version = "0.2.4", features = [ "nightly" ] }
flate2 = "1.0.19"
lazy_static = "1.4.0"
log = "0.4.13"
pretty_env_logger = "0.4.0"
regex = "1.4.3"
reqwest = { version = "0.10.8", default-features = false, features = [
    "rustls-tls",
    "json"
] }
semver = "0.11.0"
# Specfiying a full version as sentry won't follow semver until release 1.0
sentry = { version = "0.18.1", features = [ "with_env_logger" ] }
serde = { version = "1.0.119", features = [ "derive" ] }
serde_json = "1.0.61"
sqlx = { version = "0.3.5", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "postgres"
] }
tar = "0.4.30"
thiserror = "1.0.23"
tokio = { version = "0.2.22", default-features = false }
typemap = "0.3.3"

[dependencies.serenity]
version = "0.10.4"
default-features = false
features = [
    "cache",
    "http",
    "framework",
    "standard_framework",
    "rustls_backend"
]

[build-dependencies]
built = "0.4.4"
